--- a/app/src/main/res/layout/fragment_accompaniment_menu.xml
+++ b/app/src/main/res/layout/fragment_accompaniment_menu.xml
@@ -1,19 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--
-  ~ Copyright (C) 2021 The Android Open Source Project.
-  ~
-  ~ Licensed under the Apache License, Version 2.0 (the "License");
-  ~ you may not use this file except in compliance with the License.
-  ~ You may obtain a copy of the License at
-  ~
-  ~     http://www.apache.org/licenses/LICENSE-2.0
-  ~
-  ~ Unless required by applicable law or agreed to in writing, software
-  ~ distributed under the License is distributed on an "AS IS" BASIS,
-  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-  ~ See the License for the specific language governing permissions and
-  ~ limitations under the License.
-  -->
+
 <layout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
@@ -27,6 +13,9 @@
             type="com.example.lunchtray.model.OrderViewModel" />
 
         <!-- TODO: Add the data binding variable for the AccompanimentMenuFragment -->
+        <variable
+            name="AccompanimentMenuFragment"
+            type="com.example.lunchtray.ui.order.AccompanimentMenuFragment" />
     </data>
 
 
@@ -56,6 +45,8 @@
                     android:layout_height="wrap_content"
                     android:textAppearance="?attr/textAppearanceBody1"
                     android:text='@{viewModel.menuItems["bread"].name}'
+                    android:checked='@{viewModel.accompaniment.equals(viewModel.menuItems["bread"].name)}'
+                    android:onClick='@{()-> viewModel.setAccompaniment(viewModel.menuItems["bread"].name)}'
                     tools:text="Accompaniment 1" />
 
                 <TextView
@@ -84,6 +75,8 @@
                     android:layout_height="wrap_content"
                     android:textAppearance="?attr/textAppearanceBody1"
                     android:text='@{viewModel.menuItems["berries"].name}'
+                    android:checked='@{viewModel.accompaniment.equals(viewModel.menuItems["berries"].name)}'
+                    android:onClick='@{()-> viewModel.setAccompaniment(viewModel.menuItems["berries"].name)}'
                     tools:text="Accompaniment 2" />
 
                 <TextView
@@ -115,6 +108,8 @@
                     android:layout_height="wrap_content"
                     android:textAppearance="?attr/textAppearanceBody1"
                     android:text='@{viewModel.menuItems["pickles"].name}'
+                    android:checked='@{viewModel.accompaniment.equals(viewModel.menuItems["pickles"].name)}'
+                    android:onClick='@{()-> viewModel.setAccompaniment(viewModel.menuItems["pickles"].name)}'
                     tools:text="Accompaniment 3" />
 
                 <!-- TODO: set the text to the accompaniment description using the view model -->
@@ -150,7 +145,8 @@
                 style="@style/Widget.LunchTray.TextView.Subtotal"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/divider"
-                tools:text="Subtotal $5.00"/>
+                tools:text="@{@string/subtotal(viewModel.subtotal)}"
+                />
 
             <!-- TODO: cancel the order when clicked -->
             <Button
@@ -158,7 +154,8 @@
                 style="@style/Widget.Order.Button.Cancel"
                 app:layout_constraintEnd_toStartOf="@id/next_button"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@id/next_button" />
+                app:layout_constraintTop_toTopOf="@id/next_button"
+                android:onClick='@{()-> AccompanimentMenuFragment.cancelOrder()}'/>
 
             <!-- TODO: go to the next screen when clicked -->
             <Button
@@ -167,7 +164,8 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@id/cancel_button"
-                app:layout_constraintTop_toBottomOf="@id/subtotal" />
+                app:layout_constraintTop_toBottomOf="@id/subtotal"
+                android:onClick='@{()-> AccompanimentMenuFragment.goToNextScreen()}'/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
