--- a/app/src/main/res/layout/fragment_entree_menu.xml
+++ b/app/src/main/res/layout/fragment_entree_menu.xml
@@ -1,19 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--
-  ~ Copyright (C) 2021 The Android Open Source Project.
-  ~
-  ~ Licensed under the Apache License, Version 2.0 (the "License");
-  ~ you may not use this file except in compliance with the License.
-  ~ You may obtain a copy of the License at
-  ~
-  ~     http://www.apache.org/licenses/LICENSE-2.0
-  ~
-  ~ Unless required by applicable law or agreed to in writing, software
-  ~ distributed under the License is distributed on an "AS IS" BASIS,
-  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-  ~ See the License for the specific language governing permissions and
-  ~ limitations under the License.
-  -->
+
 <layout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
@@ -24,8 +10,10 @@
         <variable
             name="viewModel"
             type="com.example.lunchtray.model.OrderViewModel" />
-
         <!-- TODO: Add the data binding variable for the EntreeMenuFragment -->
+        <variable
+            name="EntreeMenuFragment"
+            type="com.example.lunchtray.ui.order.EntreeMenuFragment" />
     </data>
 
 
@@ -55,6 +43,8 @@
                     android:layout_height="wrap_content"
                     android:textAppearance="?attr/textAppearanceBody1"
                     android:text='@{viewModel.menuItems["cauliflower"].name}'
+                    android:onClick='@{()-> viewModel.setEntree("cauliflower")}'
+                    android:checked='@{viewModel.entree.equals(viewModel.menuItems["cauliflower"])}'
                     tools:text="Entree 1" />
 
                 <TextView
@@ -85,6 +75,8 @@
                     android:layout_height="wrap_content"
                     android:textAppearance="?attr/textAppearanceBody1"
                     android:text='@{viewModel.menuItems["chili"].name}'
+                    android:checked='@{viewModel.entree.equals(viewModel.menuItems["chili"])}'
+                    android:onClick='@{()-> viewModel.setEntree("chili")}'
                     tools:text="Entree 2" />
 
                 <TextView
@@ -115,6 +107,8 @@
                     android:layout_height="wrap_content"
                     android:textAppearance="?attr/textAppearanceBody1"
                     android:text='@{viewModel.menuItems["pasta"].name}'
+                    android:checked='@{viewModel.entree.equals(viewModel.menuItems["pasta"])}'
+                    android:onClick='@{()-> viewModel.setEntree("pasta")}'
                     tools:text="Entree 3" />
 
                 <TextView
@@ -145,6 +139,8 @@
                     android:layout_height="wrap_content"
                     android:textAppearance="?attr/textAppearanceBody1"
                     android:text='@{viewModel.menuItems["skillet"].name}'
+                    android:checked='@{viewModel.entree.equals(viewModel.menuItems["skillet"])}'
+                    android:onClick='@{()-> viewModel.setEntree("skillet")}'
                     tools:text="Entree 4" />
 
                 <TextView
@@ -178,7 +174,7 @@
                 style="@style/Widget.LunchTray.TextView.Subtotal"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/divider"
-                tools:text="Subtotal $5.00"/>
+                tools:text="@{@string/subtotal(viewModel.subtotal)}" />
 
             <!-- TODO: cancel the order when clicked -->
             <Button
@@ -186,7 +182,8 @@
                 style="@style/Widget.Order.Button.Cancel"
                 app:layout_constraintEnd_toStartOf="@id/next_button"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@id/next_button" />
+                app:layout_constraintTop_toTopOf="@id/next_button"
+                android:onClick='@{()-> EntreeMenuFragment.cancelOrder()}'/>
 
             <!-- TODO: go to the next screen when clicked -->
             <Button
@@ -195,7 +192,8 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@id/cancel_button"
-                app:layout_constraintTop_toBottomOf="@id/subtotal" />
+                app:layout_constraintTop_toBottomOf="@id/subtotal"
+                android:onClick='@{()-> EntreeMenuFragment.goToNextScreen()}'/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
