--- a/app/src/main/res/layout/fragment_side_menu.xml
+++ b/app/src/main/res/layout/fragment_side_menu.xml
@@ -1,19 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--
-  ~ Copyright (C) 2021 The Android Open Source Project.
-  ~
-  ~ Licensed under the Apache License, Version 2.0 (the "License");
-  ~ you may not use this file except in compliance with the License.
-  ~ You may obtain a copy of the License at
-  ~
-  ~     http://www.apache.org/licenses/LICENSE-2.0
-  ~
-  ~ Unless required by applicable law or agreed to in writing, software
-  ~ distributed under the License is distributed on an "AS IS" BASIS,
-  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-  ~ See the License for the specific language governing permissions and
-  ~ limitations under the License.
-  -->
+
 <layout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
@@ -25,8 +11,12 @@
         <variable
             name="viewModel"
             type="com.example.lunchtray.model.OrderViewModel" />
-
         <!-- TODO: Add the data binding variable for the SideMenuFragment -->
+        <variable
+            name="SideMenuFragment"
+            type="com.example.lunchtray.ui.order.SideMenuFragment" />
+
+
     </data>
 
     <ScrollView
@@ -55,6 +45,8 @@
                     android:layout_height="wrap_content"
                     android:textAppearance="?attr/textAppearanceBody1"
                     android:text='@{viewModel.menuItems["salad"].name}'
+                    android:checked='@{viewModel.entree.equals(viewModel.menuItems["salad"].name)}'
+                    android:onClick='@{()-> viewModel.setSide(viewModel.menuItems["salad"].name)}'
                     tools:text="Side 1" />
 
                 <TextView
@@ -85,6 +77,8 @@
                     android:layout_height="wrap_content"
                     android:textAppearance="?attr/textAppearanceBody1"
                     android:text='@{viewModel.menuItems["soup"].name}'
+                    android:checked='@{viewModel.entree.equals(viewModel.menuItems["soup"].name)}'
+                    android:onClick='@{()-> viewModel.setSide(viewModel.menuItems["soup"].name)}'
                     tools:text="Side 2" />
 
                 <TextView
@@ -116,6 +110,8 @@
                     android:layout_height="wrap_content"
                     android:textAppearance="?attr/textAppearanceBody1"
                     android:text='@{viewModel.menuItems["potatoes"].name}'
+                    android:checked='@{viewModel.entree.equals(viewModel.menuItems["potatoes"].name)}'
+                    android:onClick='@{()-> viewModel.setSide(viewModel.menuItems["potatoes"].name)}'
                     tools:text="Side 3" />
 
                 <TextView
@@ -146,6 +142,8 @@
                     android:layout_height="wrap_content"
                     android:textAppearance="?attr/textAppearanceBody1"
                     android:text='@{viewModel.menuItems["rice"].name}'
+                    android:checked='@{viewModel.entree.equals(viewModel.menuItems["rice"].name)}'
+                    android:onClick='@{()-> viewModel.setSide(viewModel.menuItems["rice"].name)}'
                     tools:text="Side 4" />
 
                 <TextView
@@ -179,7 +177,7 @@
                 style="@style/Widget.LunchTray.TextView.Subtotal"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/divider"
-                tools:text="Subtotal $5.00"/>
+                tools:text="@{@string/subtotal(viewModel.subtotal)}"/>
 
             <!-- TODO: cancel the order when clicked -->
             <Button
@@ -187,7 +185,8 @@
                 style="@style/Widget.Order.Button.Cancel"
                 app:layout_constraintEnd_toStartOf="@id/next_button"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@id/next_button" />
+                app:layout_constraintTop_toTopOf="@id/next_button"
+                android:onClick='@{()-> SideMenuFragment.cancelOrder()}'/>
 
             <!-- TODO: go to the next screen when clicked -->
             <Button
@@ -196,7 +195,8 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@id/cancel_button"
-                app:layout_constraintTop_toBottomOf="@id/subtotal" />
+                app:layout_constraintTop_toBottomOf="@id/subtotal"
+                android:onClick='@{()-> SideMenuFragment.goToNextScreen()}'/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
