Implementing Data Binding in fragment_accompaniment_menu.xml.

--- a/app/src/main/res/layout/fragment_accompaniment_menu.xml
+++ b/app/src/main/res/layout/fragment_accompaniment_menu.xml
@@ -11,7 +11,6 @@
         <variable
             name="viewModel"
             type="com.example.lunchtray.model.OrderViewModel" />
-
         <!-- TODO: Add the data binding variable for the AccompanimentMenuFragment -->
         <variable
             name="AccompanimentMenuFragment"
@@ -45,8 +44,8 @@
                     android:layout_height="wrap_content"
                     android:textAppearance="?attr/textAppearanceBody1"
                     android:text='@{viewModel.menuItems["bread"].name}'
-                    android:checked='@{viewModel.accompaniment.equals(viewModel.menuItems["bread"].name)}'
-                    android:onClick='@{()-> viewModel.setAccompaniment(viewModel.menuItems["bread"].name)}'
+                    android:checked='@{viewModel.accompaniment.equals(viewModel.menuItems["bread"])}'
+                    android:onClick='@{()-> viewModel.setAccompaniment("bread")}'
                     tools:text="Accompaniment 1" />
 
                 <TextView
@@ -75,8 +74,8 @@
                     android:layout_height="wrap_content"
                     android:textAppearance="?attr/textAppearanceBody1"
                     android:text='@{viewModel.menuItems["berries"].name}'
-                    android:checked='@{viewModel.accompaniment.equals(viewModel.menuItems["berries"].name)}'
-                    android:onClick='@{()-> viewModel.setAccompaniment(viewModel.menuItems["berries"].name)}'
+                    android:checked='@{viewModel.accompaniment.equals(viewModel.menuItems["berries"])}'
+                    android:onClick='@{()-> viewModel.setAccompaniment("berries")}'
                     tools:text="Accompaniment 2" />
 
                 <TextView
@@ -108,8 +107,8 @@
                     android:layout_height="wrap_content"
                     android:textAppearance="?attr/textAppearanceBody1"
                     android:text='@{viewModel.menuItems["pickles"].name}'
-                    android:checked='@{viewModel.accompaniment.equals(viewModel.menuItems["pickles"].name)}'
-                    android:onClick='@{()-> viewModel.setAccompaniment(viewModel.menuItems["pickles"].name)}'
+                    android:checked='@{viewModel.accompaniment.equals(viewModel.menuItems["pickles"])}'
+                    android:onClick='@{()-> viewModel.setAccompaniment("pickles")}'
                     tools:text="Accompaniment 3" />
 
                 <!-- TODO: set the text to the accompaniment description using the view model -->
