--- a/app/src/main/res/layout/fragment_checkout.xml
+++ b/app/src/main/res/layout/fragment_checkout.xml
@@ -16,6 +16,9 @@
         <variable
             name="CheckoutFragment"
             type="com.example.lunchtray.ui.order.CheckoutFragment" />
+        <variable
+            name="viewModel"
+            type="com.example.lunchtray.model.OrderViewModel" />
     </data>
     <ScrollView
         android:layout_width="match_parent"
@@ -39,7 +42,7 @@
                 style="@style/Widget.LunchTray.TextView.CheckoutItem.Info"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/order_summary"
-                tools:text="Cauliflower" />
+                android:text='@{viewModel.entree.name.toString()}'/>
 
             <!-- TODO: display the entree price based on the entree selection -->
             <TextView
@@ -47,7 +50,7 @@
                 style="@style/Widget.LunchTray.TextView.CheckoutItem.Info"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="@id/entree_selection"
-                tools:text="$7.00"/>
+                android:text='@{viewModel.entree.formattedPrice}'/>
 
             <!-- TODO: display the side name based on the side selection -->
             <TextView
@@ -55,7 +58,7 @@
                 style="@style/Widget.LunchTray.TextView.CheckoutItem.Info"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/entree_selection"
-                tools:text="Spicy Potatoes" />
+                android:text='@{viewModel.side.name.toString()}' />
 
             <!-- TODO: display the side price based on the side selection -->
             <TextView
@@ -63,7 +66,7 @@
                 style="@style/Widget.LunchTray.TextView.CheckoutItem.Info"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="@id/side_selection"
-                tools:text="$2.00"/>
+                android:text='@{viewModel.side.formattedPrice}'/>
 
             <!-- TODO: display the accompaniment name based on the accompaniment selection -->
             <TextView
@@ -71,7 +74,7 @@
                 style="@style/Widget.LunchTray.TextView.CheckoutItem.Info"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/side_selection"
-                tools:text="Mixed Berries" />
+                android:text='@{viewModel.accompaniment.name.toString()}' />
 
             <!-- TODO: display the accompaniment price based on the accompaniment selection -->
             <TextView
@@ -79,7 +82,7 @@
                 style="@style/Widget.LunchTray.TextView.CheckoutItem.Info"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="@id/accompaniment_selection"
-                tools:text="$1.00"/>
+                android:text='@{viewModel.accompaniment.formattedPrice}'/>
 
             <View
                 android:id="@+id/divider"
@@ -95,7 +98,7 @@
                 style="@style/Widget.LunchTray.TextView.Subtotal"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/divider"
-                tools:text="Subtotal: $10.00"/>
+                tools:text="@{@string/subtotal(viewModel.subtotal)}"/>
 
             <!-- TODO: set the text to the current tax value from the view model -->
             <TextView
@@ -104,7 +107,7 @@
                 android:layout_marginTop="0dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/subtotal"
-                tools:text="Tax: $0.73"/>
+                tools:text="@{@string/tax(viewModel.tax)}"/>
 
             <!-- TODO: set the text to the current total value from the view model -->
             <TextView
@@ -115,30 +118,46 @@
                 android:textAppearance="?attr/textAppearanceHeadline6"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/tax"
-                tools:text="Total: $10.73"/>
+                tools:text="@{@string/total(viewModel.total)}"/>
 
             <!-- TODO: submit the order when clicked -->
+
+            <!-- TODO: cancel the order when clicked -->
+
             <Button
                 android:id="@+id/submit_button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/side_margin"
+                android:layout_marginTop="28dp"
+                android:onClick='@{()-> CheckoutFragment.submitOrder()}'
                 android:text="@string/submit"
-                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/total"/>
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/imageView9" />
 
-            <!-- TODO: cancel the order when clicked -->
             <Button
                 android:id="@+id/cancel_button"
                 style="?attr/materialButtonOutlinedStyle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/base_margin"
+                android:layout_marginTop="8dp"
+                android:onClick='@{()-> CheckoutFragment.cancelOrder()}'
                 android:text="@string/cancel"
-                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/submit_button"/>
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/submit_button" />
+
+            <ImageView
+                android:id="@+id/imageView9"
+                android:layout_width="295dp"
+                android:layout_height="295dp"
+                android:layout_marginTop="16dp"
+                android:src="@drawable/delivery"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/divider"
+                app:layout_constraintVertical_bias="0.442" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
