--- a/app/src/main/res/layout/fragment_entree_menu.xml
+++ b/app/src/main/res/layout/fragment_entree_menu.xml
@@ -14,6 +14,7 @@
         <variable
             name="EntreeMenuFragment"
             type="com.example.lunchtray.ui.order.EntreeMenuFragment" />
+
     </data>
 
 
@@ -37,15 +38,23 @@
                 app:layout_constraintTop_toTopOf="parent">
 
                 <!-- TODO: set the entree in the view model when the RadioButton is clicked -->
+
                 <RadioButton
                     android:id="@+id/cauliflower"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textAppearance="?attr/textAppearanceBody1"
-                    android:text='@{viewModel.menuItems["cauliflower"].name}'
-                    android:onClick='@{()-> viewModel.setEntree("cauliflower")}'
                     android:checked='@{viewModel.entree.equals(viewModel.menuItems["cauliflower"])}'
+                    android:onClick='@{()-> viewModel.setEntree("cauliflower")}'
+                    android:text='@{viewModel.menuItems["cauliflower"].name}'
+                    android:textAppearance="?attr/textAppearanceBody1"
                     tools:text="Entree 1" />
+
+                <ImageView
+                    android:id="@+id/imageView6"
+                    android:layout_width="357dp"
+                    android:layout_height="162dp"
+                    android:contentDescription="@string/entre1"
+                    android:src="@drawable/entree1" />
 
                 <TextView
                     android:id="@+id/cauliflower_description"
@@ -79,6 +88,12 @@
                     android:onClick='@{()-> viewModel.setEntree("chili")}'
                     tools:text="Entree 2" />
 
+                <ImageView
+                    android:id="@+id/imageView7"
+                    android:layout_width="359dp"
+                    android:layout_height="179dp"
+                    android:src="@drawable/entree5" />
+
                 <TextView
                     android:id="@+id/chili_description"
                     style="@style/Widget.MenuItem.TextView.Info"
@@ -111,6 +126,12 @@
                     android:onClick='@{()-> viewModel.setEntree("pasta")}'
                     tools:text="Entree 3" />
 
+                <ImageView
+                    android:id="@+id/imageView5"
+                    android:layout_width="match_parent"
+                    android:layout_height="169dp"
+                    android:src="@drawable/entree3" />
+
                 <TextView
                     android:id="@+id/pasta_description"
                     style="@style/Widget.MenuItem.TextView.Info"
@@ -142,6 +163,12 @@
                     android:checked='@{viewModel.entree.equals(viewModel.menuItems["skillet"])}'
                     android:onClick='@{()-> viewModel.setEntree("skillet")}'
                     tools:text="Entree 4" />
+
+                <ImageView
+                    android:id="@+id/imageView8"
+                    android:layout_width="wrap_content"
+                    android:layout_height="183dp"
+                    android:src="@drawable/entree4" />
 
                 <TextView
                     android:id="@+id/skillet_description"
