--- a/app/src/main/res/layout/fragment_side_menu.xml
+++ b/app/src/main/res/layout/fragment_side_menu.xml
@@ -49,6 +49,12 @@
                     android:onClick='@{()-> viewModel.setSide("salad")}'
                     tools:text="Side 1" />
 
+                <ImageView
+                    android:id="@+id/imageView10"
+                    android:layout_width="match_parent"
+                    android:layout_height="173dp"
+                    android:src="@drawable/sidee2" />
+
                 <TextView
                     android:id="@+id/salad_description"
                     style="@style/Widget.MenuItem.TextView.Info"
@@ -80,6 +86,12 @@
                     android:checked='@{viewModel.entree.equals(viewModel.menuItems["soup"])}'
                     android:onClick='@{()-> viewModel.setSide("soup")}'
                     tools:text="Side 2" />
+
+                <ImageView
+                    android:id="@+id/imageView11"
+                    android:layout_width="match_parent"
+                    android:layout_height="166dp"
+                    android:src="@drawable/sidee1" />
 
                 <TextView
                     android:id="@+id/soup_description"
@@ -114,6 +126,12 @@
                     android:onClick='@{()-> viewModel.setSide("potatoes")}'
                     tools:text="Side 3" />
 
+                <ImageView
+                    android:id="@+id/imageView12"
+                    android:layout_width="match_parent"
+                    android:layout_height="166dp"
+                    android:src="@drawable/sidee4" />
+
                 <TextView
                     android:id="@+id/potato_description"
                     style="@style/Widget.MenuItem.TextView.Info"
@@ -145,6 +163,12 @@
                     android:checked='@{viewModel.entree.equals(viewModel.menuItems["rice"])}'
                     android:onClick='@{()-> viewModel.setSide("rice")}'
                     tools:text="Side 4" />
+
+                <ImageView
+                    android:id="@+id/imageView13"
+                    android:layout_width="match_parent"
+                    android:layout_height="164dp"
+                    android:src="@drawable/sidee3" />
 
                 <TextView
                     android:id="@+id/rice_description"
