--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -24,8 +24,8 @@
     <fragment
         android:id="@+id/startOrderFragment"
         android:name="com.example.lunchtray.ui.order.StartOrderFragment"
-        android:label="fragment_start_order"
-        tools:layout="@layout/fragment_start_order" >
+        android:label="@string/app_start"
+        tools:layout="@layout/fragment_start_order">
         <action
             android:id="@+id/action_startOrderFragment_to_entreeMenuFragment"
             app:destination="@id/entreeMenuFragment" />
@@ -33,8 +33,8 @@
     <fragment
         android:id="@+id/entreeMenuFragment"
         android:name="com.example.lunchtray.ui.order.EntreeMenuFragment"
-        android:label="fragment_entree_menu"
-        tools:layout="@layout/fragment_entree_menu" >
+        android:label="@string/app_entre"
+        tools:layout="@layout/fragment_entree_menu">
         <action
             android:id="@+id/action_entreeMenuFragment_to_sideMenuFragment"
             app:destination="@id/sideMenuFragment" />
@@ -45,8 +45,8 @@
     <fragment
         android:id="@+id/sideMenuFragment"
         android:name="com.example.lunchtray.ui.order.SideMenuFragment"
-        android:label="fragment_side_menu"
-        tools:layout="@layout/fragment_side_menu" >
+        android:label="@string/app_side"
+        tools:layout="@layout/fragment_side_menu">
         <action
             android:id="@+id/action_sideMenuFragment_to_accompanimentMenuFragment"
             app:destination="@id/accompanimentMenuFragment" />
@@ -57,8 +57,8 @@
     <fragment
         android:id="@+id/accompanimentMenuFragment"
         android:name="com.example.lunchtray.ui.order.AccompanimentMenuFragment"
-        android:label="fragment_accompaniment_menu"
-        tools:layout="@layout/fragment_accompaniment_menu" >
+        android:label="@string/app_acomp"
+        tools:layout="@layout/fragment_accompaniment_menu">
         <action
             android:id="@+id/action_accompanimentMenuFragment_to_checkoutFragment"
             app:destination="@id/checkoutFragment" />
@@ -69,8 +69,8 @@
     <fragment
         android:id="@+id/checkoutFragment"
         android:name="com.example.lunchtray.ui.order.CheckoutFragment"
-        android:label="fragment_checkout"
-        tools:layout="@layout/fragment_checkout" >
+        android:label="@string/app_resume"
+        tools:layout="@layout/fragment_checkout">
         <action
             android:id="@+id/action_checkoutFragment_to_startOrderFragment"
             app:destination="@id/startOrderFragment" />
